[package]
name = "shiori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.3.1"
async-io = { git = "https://github.com/smol-rs/async-io", branch = "notgull/waitable" }
futures-lite = "2.2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Ioctl"
] }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem"
] }
